Add/delete lists. Shell for managing items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Shopping List</string>
     <string name="action_settings">Settings</string>
+    <string name="action_manage">Manage</string>
+    <string name="action_delete">Delete</string>
     <string name="title_activity_shopping_list_add">New Shopping List</string>
 </resources>
