--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_delete">Delete</string>
     <string name="title_activity_shopping_list_add">New Shopping List</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="settings_sync_url">Sync URL</string>
 </resources>
